--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,22 +1,47 @@
-# syntax=docker/dockerfile:1
-FROM python:3.12.4 as builder
-WORKDIR /code
+# syntax=docker/dockerfile:1.9
+FROM python:3.12.5 AS builder
 
-RUN python3 -m venv /venv
-ENV PATH="/venv/bin:$PATH"
-RUN pip install --no-cache-dir build==1.2.1
-COPY requirements.txt .
-RUN pip install -r requirements.txt --no-cache-dir
+SHELL ["/bin/sh", "-exc"]
+WORKDIR /project
 
-COPY pyproject.toml .
-COPY src/ ./src
-RUN python -m build -w -o /dist && \
-    pip install --no-cache-dir /dist/*.whl
+# Setup uv
+COPY --from=ghcr.io/astral-sh/uv:0.4.5 /uv /usr/local/bin/
+ENV UV_LINK_MODE=copy \
+    UV_COMPILE_BYTECODE=1 \
+    UV_PYTHON_DOWNLOADS=never \
+    UV_PYTHON=python3.12 \
+    UV_PROJECT_ENVIRONMENT=/app
+
+# Create a virtual environment
+RUN --mount=type=cache,target=/root/.cache uv venv $UV_PROJECT_ENVIRONMENT
+
+# Install dependencies
+COPY pyproject.toml uv.lock /project/
+RUN --mount=type=cache,target=/root/.cache uv sync --frozen --no-install-project --no-dev
 
 
-FROM python:3.12.4-slim
+# Build the project
+COPY src/ /project/
+RUN --mount=type=cache,target=/root/.cache/uv uv build --wheel -o /dist /project
+
+# Install the project package
+RUN --mount=type=cache,target=/root/.cache uv pip install --python=$UV_PROJECT_ENVIRONMENT --no-deps /dist/*.whl
+
+
+
+FROM python:3.12.5-slim
+ENV PATH="/app/bin:$PATH"
+
+# Create app user, group
+RUN <<EOT
+groupadd -r app
+useradd -r -d /app -g app -N app
+EOT
+
+COPY --from=builder --chown=app:app /app /app
+
+
+USER app
+WORKDIR /app
 EXPOSE 3000
-ENV PATH="/venv/bin:$PATH"
-COPY --from=builder /venv /venv
-
 CMD ["gunicorn", "-b", "0.0.0.0:3000", "--timeout", "999", "--threads", "24", "-k", "uvicorn.workers.UvicornWorker", "app.main:server"]
