--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,12 @@ version = "0.0.1"
 description = ""
 requires-python = ">=3.12"
 dependencies = [
-    "mm-base1~=0.1.1",
+    "mm-base1~=0.1.2",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
@@ -14,15 +17,14 @@ dev-dependencies = [
     "pytest-xdist~=3.6.1",
     "pytest-httpserver~=1.1.0",
     "coverage~=7.6.0",
-    "ruff~=0.6.1",
+    "ruff~=0.6.3",
     "pip-audit~=2.7.0",
     "bandit~=1.7.7",
-    "mypy~=1.11.0",
+    "mypy~=1.11.2",
     "types-python-dateutil~=2.9.0.20240821",
     "types-requests~=2.32.0.20240523",
     "types-PyYAML~=6.0.12.12",
 ]
-
 
 [tool.mypy]
 python_version = "3.12"
@@ -36,7 +38,6 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["app.routers.*"]
 disable_error_code = ["no-untyped-def"]
-
 
 [tool.ruff]
 line-length = 130
@@ -63,7 +64,6 @@ lint.ignore = [
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-
 
 [tool.bandit]
 exclude_dirs = ["tests"]
